# numer

./: .gitignore  README.md  __init__.py  config.py  data.py  environment.yml  evaluate.py  file_layout.txt  get_pickle.py  main.py  models.py  pipeline.py  play.ipynb  pyproject.toml  pyrightconfig.json  submission.py  submit.py  submit.sh  utils.py
evaluate_models/: ensemble_lgbm_20260624_015211_results.json  evaluate_models.py  evaluate_models.sh
logs/: 16434985_train.err  16434985_train.out
models/: __init__.py
numer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
train_models/: Ensemble.py  custom.py  ensemble_lgbm.py  evaluate_models.py  lgbm.py
